Fix sidebar on small screens not hiding completely

--- a/views/css/style.scss
+++ b/views/css/style.scss
@@ -404,7 +404,7 @@ nav {
   .sidebar {
     z-index: -1;
     width: 100vw;
-    transform: translateY(-100%);
+    transform: translateY(-110%);
     padding-block: 8px 16px;
     br {
       display: none;
